updated the greedy solver

--- a/machine-learning/genetic-algorithms/tsp/ga/index.html
+++ b/machine-learning/genetic-algorithms/tsp/ga/index.html
@@ -35,10 +35,11 @@
 
             // Add our Points
             __GA_POINTS_HERE__
-            __BF_POINTS_HERE__
             __GD_POINTS_HERE__
+            __BF_POINTS_HERE__
 
-            #  Titles
+
+            //  Titles
             __WINDOW_TITLES_HERE__
 
 
@@ -54,7 +55,7 @@
             var gd_path = new google.maps.Polyline({
                 path: gd_path_coordinates,
                 geodesic: true,
-                strokeColor: '#FF0000',
+                strokeColor: '#0000FF',
                 strokeOpacity: 1.0,
                 strokeWeight: 2
             });
