--- a/machine-learning/genetic-algorithms/tsp/ga/index.html
+++ b/machine-learning/genetic-algorithms/tsp/ga/index.html
@@ -19,10 +19,12 @@
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <script>
 
     $( document ).on( "pagecreate", "#map-page", function() {
+
         var map;
         var ga_markers = [];
         var ga_windows = [];
@@ -98,12 +100,13 @@
             }
 
             __ADD_LISTENERS__
-        }
+
+        } // End of Init_Map Method
 
         }); // End of Document Page Creation
 
       </script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
+
   </head>
   <body>
 
