--- a/machine-learning/genetic-algorithms/tsp/ga/index.html
+++ b/machine-learning/genetic-algorithms/tsp/ga/index.html
@@ -22,7 +22,7 @@
       }
 
       .greedyButton{
-        background-color: lightRed !important;
+        background-color: red !important;
         border: 0 !important;
         -webkit-box-shadow: none;
         box-shadow: none;
