Added distance from brute force metric.

--- a/machine-learning/genetic-algorithms/tsp/ga/index.html
+++ b/machine-learning/genetic-algorithms/tsp/ga/index.html
@@ -239,7 +239,7 @@
               </div>
 
               <!-- Info -->
-              <div class="rightBox">Time: __GD_TIME__ seconds, Distance from Optimal: __GD_DIST__</div>
+              <div class="rightBox">Time: __GD_TIME__ seconds, Distance from Optimal: __GD_DIST__ meters</div>
             </div>
 
             <!-- Genetic Algorithm Content Area -->
@@ -255,7 +255,7 @@
               </div>
 
               <!-- GA Info -->
-              <div class="rightBox">Time: __GA_TIME__ seconds, Distance from Optimal: __GA_DIST__</div>
+              <div class="rightBox">Time: __GA_TIME__ seconds, Distance from Optimal: __GA_DIST__ meters</div>
             </div>
 
             <div class="opContainer">
